vest-dsl/test/bad/bind_invalid_format.vest
foo = {
  @len: u8,
  payload: [u16; @len] >>= Vec<u64>,
}
